# rag_app

./: .gitignore  README.md  pyproject.toml
doc_search/: client.py  database.py  main.py
model_serve/: tiny_llama.sh
rag/: main.py
