[tool.poetry]
name = "rag_app"
version = "0.1.0"
description = "Document retrieval rag app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.12"
fastapi = "^0.110.0"
chromadb = "^0.4.24"
scikit-learn = "^1.4.1"
uvicorn = "^0.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
